Fixes to animations (transitions) and notifications
Make those animations buttery smooth, glitchless and awesome.

* Put all notifications into a separate #notifications div (helps
  sandbox those transformed elements better, seems to fix blurry text
  for good).
* Create a more universal transition LESS mixin (accepts arbitrary
  number of transitions just like transition CSS property).
* Animate only the required properties for notifications (not all
  properties).
* Provide a reliable fallback for browsers that don't support
  position: fixed (that works both with and without animations).
* Stop treating Firefox and MSIE 10 (Windows Phone 8) as if they didn't
  support position: fixed.

Bug: 50621

--- a/less/common/mf-common.less
+++ b/less/common/mf-common.less
@@ -273,12 +273,20 @@ i {
 	display: block;
 }
 
-.supportsPositionFixed {
+.position-fixed {
+	position: fixed;
+	// workaround for:
+	// http://code.google.com/p/chromium/issues/detail?id=20574
+	// (otherwise hidden drawer causes .buttonBar to render incorrectly)
+	.transform( translate3d(0,0,0) );
+}
+
+.no-position-fixed {
+	#notifications {
+		bottom: 0;
+	}
+
 	.position-fixed {
-		position: fixed;
-		// workaround for:
-		// http://code.google.com/p/chromium/issues/detail?id=20574
-		// (otherwise hidden drawer causes .buttonBar to render incorrectly)
-		.transform( translate3d(0,0,0) );
+		position: absolute;
 	}
 }
