--- a/less/specials/mobilediff.less
+++ b/less/specials/mobilediff.less
@@ -172,12 +172,10 @@
 	}
 }
 
-.supportsPositionFixed {
-	#mw-mf-diffview {
-		#mw-mf-userinfo {
-			bottom: 0;
-			left: 0;
-			right: 0;
-		}
+#mw-mf-diffview {
+	#mw-mf-userinfo {
+		bottom: 0;
+		left: 0;
+		right: 0;
 	}
 }
