--- a/stylesheets/modules/mf-watchstar.css
+++ b/stylesheets/modules/mf-watchstar.css
@@ -5,12 +5,8 @@ a.watch-this-article.loading {
 .animations .beta .watch-this-article,
 .animations .alpha .watch-this-article {
   -webkit-backface-visibility: hidden;
-  -webkit-transition-property: -webkit-transform;
-  transition-property: transform;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
-  -webkit-transition-timing-function: ease;
-  transition-timing-function: ease;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
 }
 .animations .beta .watch-this-article.watched,
 .animations .alpha .watch-this-article.watched {
